--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,13 +6,17 @@ jobs:
     steps:
       - name: Get Code
         uses: actions/checkout@v3
+
       - name: Install NodeJS
         uses: actions/setup-node@v3
         with:
           node-version: 18
+
       - name: Install Packages
         run: npm ci
+
+      - name: Install Angular CLI
+        run: npm install -g @angular/cli
+
       - name: Run Tests
         run: ng test
-
-
