Install chromium-browser added

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,5 +18,8 @@ jobs:
       - name: Install Angular CLI
         run: npm install -g @angular/cli
 
+      - name: Install Chromium
+        run: sudo apt-get install -y chromium-browser
+
       - name: Run Tests
         run: ng test
