--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -39,6 +39,9 @@ jobs:
         with:
           node-version: 18
 
+      - name: Install Angular CLI
+        run: npm install -g @angular/cli
+
       - name: Install Packages
         run: npm ci
 
