--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -29,6 +29,7 @@ jobs:
         env:
           CHROME_BIN: /usr/bin/chromium-browser
   deploy:
+    needs: test-job
     runs-on: ubuntu-22.04
     steps:
       - name: Get Code
