--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -48,3 +48,11 @@ jobs:
 
       - name: Build
         run: ng build 
+
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v3
+        with: 
+          name: dist-files
+          path: |
+            dist
+            package.json
