--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -44,7 +44,7 @@ jobs:
         run: npm install -g @angular/cli
 
       - name: Install Packages
-        run: npm ci
+        run: npm install --legacy-peer-deps
 
       - name: Build
         run: ng build 
