--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -28,7 +28,7 @@ jobs:
           CHROME_BIN=$(which chromium) ng test --browsers=ChromeHeadless --watch=false
         env:
           CHROME_BIN: /usr/bin/chromium-browser
-  deploy:
+  build:
     needs: test-job
     runs-on: ubuntu-22.04
     steps:
@@ -53,6 +53,21 @@ jobs:
         uses: actions/upload-artifact@v4
         with: 
           name: dist-files
-          path: |
-            dist
-            package.json
+          path: dist
+          # path: |
+          #   dist
+          #   package.json
+  deploy:
+    needs: build
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Get Build Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: dist-files
+      - name: Just ls
+        run: ls
+        
+
+
+      
